# firjanSenai_VisaoComputacional

./: .gitignore  README.md
ia_reconhecimento/: .gitignore  README.md  pyproject.toml
ia_reconhecimento/src/: main.py  secao_01_definicao_problema.py  secao_02_objetivo_tipo.py  secao_03_dados_tecnicas.py  secao_04_metricas_desafios.py  secao_05_reflexao_referencias.py
openCV_redesNeurais/: .gitignore  README.md  pyproject.toml
openCV_redesNeurais/src/: main.py  secao_01_gerar_imagem.py  secao_02_preprocessamento.py  secao_03_deteccao.py  secao_04_classificacao.py  secao_05_cnn_analise.py
pratica01_OpenCV/: README.md  pyproject.toml
pratica01_OpenCV/src/: processamento.py
reconhecimento_facial/: README.MD  pyproject.toml
reconhecimento_facial/resultados/: log_acessos.txt
reconhecimento_facial/src/: main.py  secao_00_baixar_imagens.py  secao_01_carregar.py  secao_02_comparacao.py  secao_03_decisao.py  secao_04_analise.py
