[project]
name = "opencv-redes-neurais"
version = "0.1.0"
description = "Desafio 01 SA — Detecção e Classificação de Objetos com OpenCV"
authors = [
    {name = "Ricardo C. Ribeiro"}
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"